[#200] Fix toast vertical spacing.

--- a/www/scss/main.scss
+++ b/www/scss/main.scss
@@ -32,7 +32,6 @@ $tooltip-padding-x: 0.75rem;
 $tooltip-padding-y: 0.75rem;
 
 $toast-background-color: #343a40;
-$toast-border-width: 0;
 $toast-box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.3);
 $toast-color: #f8f9fa; /* light */
 
